--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1252,6 +1252,32 @@ and \texttt{std::weak\_ptr} holds a pointer to a ControlBlock, \texttt{std::shar
 \newpage{}
 \section{Interview Specifics}
 \subsection{Tricks}
+\subsubsection{2 Pointer Palindrome iteration}
+To count up all the palindromes in a string we you can sweep center index \texttt{i} left to right and check for odd palindromes
+\[
+    \texttt{xs[i - a] = xs[i + a]})
+\]
+and even palindrome  
+\[
+    \texttt{xs[i - a] = xs[i + 1 + a]})
+\]
+in the following way:
+\begin{lstlisting}
+const auto n = static_cast<int>(s.size());
+auto palindrome_count = 0;
+const auto expand_and_update = [&](int left, int right) -> void {
+    while(left >= 0 && right < n && s[left] == s[right]) {
+        --left;
+        ++right;
+        ++palindrome_count;
+    }
+};
+for(auto i = 0; i < n; ++i) {
+    expand_and_update(i, i); // Odd Palindrome
+    expand_and_update(i, i + 1); // Even Palindrome
+}
+\end{lstlisting}
+
 \subsubsection{Reverse Heap for bounded count}
 Suppose that you have an array of \texttt{n} elements and you want to get the top \texttt{k} elements of it. One way of doing this is to create a \texttt{MaxHeap} and to push all elements on it and pop k times, but this means you have \texttt{n} elements in your heap but only need k. 
 \begin{lstlisting}
